src/test/deca/context/valid/method-inheritanceOK.deca
class A {
	boolean equals(Object o) {
	}
	void param(int a, float c, boolean w, Object o) {}
}
