src/test/deca/context/invalid/method-moreParamThanSuper.deca
class A{
	void a(int a){}
}

class B extends A{
	void a(int a, boolean b){}
}

